minor changes to the schema doc

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .DS_Store
 *.swp
 *.swo
+*~
+create_database_mysql.sql
+report_01.sql
+report_02.sql
+report_03.sql
+report_04.sql
+report_05.sql
+report_06_01.sql
+report_06_02.sql
